<resources>
    <string name="app_name" translatable="false">BVLASER</string>
    <string name="home_name" translatable="false">Pico Full</string>
    <string name="settings">Setting</string>
    <string name="video">Video</string>
    <string name="about">Device Information</string>
    <string name="energy">%1$d J/cm²</string>
    <string name="hz">%1$d Hz</string>
    <string name="pulse">Pulse No. &#160;&#160; %1$d</string>
    <string name="spot">Spot size   %1$d mm</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="energy_density">Energy Density</string>
    <string name="rate">Frequency</string>
    <string name="off">Off</string>
    <string name="aod">ON</string>
    <string name="flash">Twinkle</string>
    <string name="language">Language</string>
    <string name="chinese">Chinese</string>
    <string name="english">English</string>
    <string name="French">French</string>
    <string name="spanish">Spanish</string>
    <string name="volume">Volume</string>
    <string name="buzz">Buzzer</string>
    <string name="red_light">Aiming Beam Intensity</string>
    <string name="device_model">Device Model No.     PICO_LASER</string>
    <string name="device_name">Device Name     Picosecond Laser</string>
    <string name="production_date">Production Date</string>
    <string name="version">Software Version</string>
    <string name="input">Input</string>
    <string name="backstage">Background Interface</string>
    <string name="exit_tips">Exit</string>
    <string name="exit_msg">Are you sure you want to exit the program?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="password_error">Password Error</string>
    <string name="password_tips">please input 4 digit password</string>
    <string name="sum">Total Shots</string>
    <string name="clear">clear</string>
    <string name="login">login</string>
    <string name="open">open</string>  //开启
    <string name="close">close</string>
    <string name="serial_port">serial</string>
    <string name="energy_bg">Energy</string>
    <string name="voltage">Voltage</string>
    <string name="energy_value">%1$d</string>
    <string name="alert">Warning!!!</string>
    <string name="temp_err">The temperature is too high！！！</string>
    <string name="xenon_err">Xenon Lamp simmering failure, please restart！！！</string>
    <string name="flow_err">Water flow error！！！</string>
    <string name="power_err">Laser power failure, please restart！！！</string>
    <string name="temp_hight">temperature too high！！！</string>
    <string name="xenon_alert">Xenon lamp simmer failed, please restart！！！</string>
    <string name="flow_alert">water flow error</string>
    <string name="power_alert">Laser power supply error, please restart！！！</string>
    <string name="input_serial">input serial port</string>
    <string name="input_password">please enter password</string>
    <string name="password_err">wrong password</string>
    <string name="current_serial_port">current serial port： %1$s</string>
    <string name="bs_on">On</string>
    <string name="bs_off">Off</string>
    <string name="bs_reset">Reset</string>
</resources>