<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BackstageFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum"
        android:textSize="30sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginStart="64dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:gravity="center"
        android:minWidth="120dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

    <ImageView
        android:id="@+id/btn_clear"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="-4dp"
        android:src="@drawable/img_new_clean"
        app:layout_constraintBottom_toBottomOf="@+id/tv_count"
        app:layout_constraintStart_toEndOf="@+id/tv_count"
        app:layout_constraintTop_toTopOf="@+id/tv_count" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="30sp"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageView
        android:id="@+id/toggle_login"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:src="@drawable/img_bs_off"
        app:layout_constraintStart_toStartOf="@+id/tv_count"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/serial_port"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/exit_tips"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/btn_exit_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray_deep"
        android:minWidth="10dp"
        android:minHeight="20dp"
        android:text="@string/exit_tips"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/edit_serial"
        app:layout_constraintTop_toTopOf="@+id/textView11" />

    <Spinner
        android:id="@+id/edit_serial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:popupBackground="@color/black"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="@+id/toggle_login"
        app:layout_constraintTop_toTopOf="@+id/textView10" />


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/energy_bg"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <ImageView
        android:id="@+id/btn_energy_minus"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/img_bg_minus"
        app:layout_constraintStart_toStartOf="@+id/toggle_login"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/tv_energy_value"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        android:gravity="center"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/btn_energy_minus"
        app:layout_constraintStart_toEndOf="@id/btn_energy_minus"
        app:layout_constraintTop_toTopOf="@id/btn_energy_minus"
        tools:text="20" />

    <ImageView
        android:id="@+id/btn_energy_plus"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/img_bs_plus"
        app:layout_constraintBottom_toBottomOf="@+id/tv_energy_value"
        app:layout_constraintStart_toEndOf="@+id/tv_energy_value"
        app:layout_constraintTop_toTopOf="@+id/tv_energy_value" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/voltage"
        android:textSize="30sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageView
        android:id="@+id/btn_voltage_minus"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:backgroundTint="@color/black"
        android:src="@drawable/img_bg_minus"
        app:layout_constraintStart_toStartOf="@+id/btn_energy_minus"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <TextView
        android:id="@+id/tv_voltage_value"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        android:background="@color/white"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/btn_voltage_minus"
        app:layout_constraintStart_toEndOf="@+id/btn_voltage_minus"
        app:layout_constraintTop_toTopOf="@+id/btn_voltage_minus"
        tools:text="30" />

    <ImageView
        android:id="@+id/btn_voltage_plus"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:backgroundTint="@color/black"
        android:src="@drawable/img_bs_plus"
        app:layout_constraintBottom_toBottomOf="@+id/tv_voltage_value"
        app:layout_constraintStart_toEndOf="@+id/tv_voltage_value"
        app:layout_constraintTop_toTopOf="@+id/tv_voltage_value" />


</androidx.constraintlayout.widget.ConstraintLayout>