<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/buzz"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <RadioGroup
        android:id="@+id/rg_buzz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_buzz_off"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:background="@drawable/selector_buzz_off"
            android:button="@null" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_buzz_on"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginStart="22dp"
            android:background="@drawable/selector_buzz_on"
            android:button="@null" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="@string/language"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <RadioGroup
        android:id="@+id/rg_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/btn_chinese"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:button="@null"
            android:background="@drawable/selector_cn"
            android:gravity="center"
            android:textColor="@drawable/language_select"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/btn_english"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:background="@drawable/selector_en"
            android:button="@null"
            android:gravity="center"
            android:textColor="@drawable/language_select"
            app:layout_constraintBottom_toBottomOf="@+id/btn_chinese"
            app:layout_constraintStart_toEndOf="@+id/btn_chinese"
            app:layout_constraintTop_toTopOf="@+id/btn_chinese" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/btn_french"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:background="@drawable/selector_fr"
            android:button="@null"
            android:gravity="center"
            android:textColor="@drawable/language_select"
            app:layout_constraintBottom_toBottomOf="@+id/btn_english"
            app:layout_constraintStart_toEndOf="@+id/btn_english"
            app:layout_constraintTop_toTopOf="@+id/btn_english" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/btn_spanish"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:background="@drawable/selector_es"
            android:button="@null"
            android:gravity="center"
            android:textColor="@drawable/language_select"
            app:layout_constraintBottom_toBottomOf="@+id/btn_french"
            app:layout_constraintStart_toEndOf="@+id/btn_french"
            app:layout_constraintTop_toTopOf="@+id/btn_french" />
    </RadioGroup>




    <TextView
        android:id="@+id/tv_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/volume"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <ImageView
        android:id="@+id/img_volume_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:src="@drawable/arrow_back"
        app:layout_constraintBottom_toBottomOf="@+id/tv_volume"
        app:layout_constraintStart_toEndOf="@+id/tv_volume"
        app:layout_constraintTop_toTopOf="@+id/tv_volume" />

    <SeekBar
        android:id="@+id/seek_volume"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:max="10"
        android:thumb="@drawable/bump"
        android:progressTint="@color/orange_primary_dark"
        android:progressBackgroundTint="@color/gray_light"
        app:layout_constraintBottom_toBottomOf="@+id/img_volume_minus"
        app:layout_constraintEnd_toStartOf="@id/img_volume_plus"
        app:layout_constraintStart_toEndOf="@id/img_volume_minus"
        app:layout_constraintTop_toTopOf="@id/img_volume_minus" />

    <ImageView
        android:id="@+id/img_volume_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_forward"
        app:layout_constraintBottom_toBottomOf="@id/img_volume_minus"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintTop_toTopOf="@id/img_volume_minus" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />


</androidx.constraintlayout.widget.ConstraintLayout>