<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.connor.picofull.ui.view.Test
            android:id="@+id/progress_energy"
            android:layout_width="0dp"
            android:layout_height="@dimen/energy_wh"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="-64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/toggle_group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_energy"
            app:percent="30"
            app:progressBarColor="@color/black"
            app:progressBarWidth="20"
            app:progressPlaceHolderWidth="10" />

        <ImageView
            android:id="@+id/toggle_group"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:src="@drawable/img_1064"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_energy" />

        <TextView
            android:id="@+id/tv_energy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/progress_energy"
            app:layout_constraintStart_toStartOf="@+id/progress_energy"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="12/cm²" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/energy_text"
            android:text="@string/energy_density"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/progress_energy"
            app:layout_constraintStart_toStartOf="@+id/progress_energy"
            app:layout_constraintTop_toTopOf="@+id/progress_energy" />

        <LinearLayout
            android:id="@+id/rg_energy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/home_rg"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/progress_energy"
            app:layout_constraintStart_toStartOf="@+id/progress_energy"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <ImageView
                android:id="@+id/btn_energy_plus"
                android:layout_width="@dimen/home_btn"
                android:layout_height="@dimen/home_btn"
                android:layout_marginEnd="@dimen/energy_rg"
                android:src="@drawable/ic_plus_uncheck" />

            <ImageView
                android:id="@+id/btn_energy_minus"
                android:layout_width="@dimen/home_btn"
                android:layout_height="@dimen/home_btn"
                android:layout_marginStart="@dimen/energy_rg"
                android:src="@drawable/ic_minus_uncheck" />
        </LinearLayout>

        <com.connor.picofull.ui.view.Test
            android:id="@+id/progress_hz"
            android:layout_width="0dp"
            android:layout_height="@dimen/energy_wh"
            android:layout_marginStart="-64dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/toggle_group"
            app:layout_constraintTop_toBottomOf="@+id/tv_hz"
            app:percent="30"
            app:progressBarColor="@color/black"
            app:progressBarWidth="20"
            app:progressPlaceHolderWidth="10" />

        <TextView
            android:id="@+id/tv_hz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/progress_hz"
            app:layout_constraintStart_toStartOf="@+id/progress_hz"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="10hz" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/energy_text"
            android:text="@string/rate"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/progress_hz"
            app:layout_constraintStart_toStartOf="@+id/progress_hz"
            app:layout_constraintTop_toTopOf="@+id/progress_hz" />

        <LinearLayout
            android:id="@+id/layout_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/home_rg"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/progress_hz"
            app:layout_constraintStart_toStartOf="@+id/progress_hz"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <ImageView
                android:id="@+id/btn_rate_plus"
                android:layout_width="@dimen/home_btn"
                android:layout_height="@dimen/home_btn"
                android:layout_marginEnd="@dimen/energy_rg"
                android:src="@drawable/ic_plus_uncheck" />

            <ImageView
                android:id="@+id/btn_rate_minus"
                android:layout_width="@dimen/home_btn"
                android:layout_height="@dimen/home_btn"
                android:layout_marginStart="@dimen/energy_rg"
                android:src="@drawable/ic_minus_uncheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_pulse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-24dp"
            android:layout_marginTop="@dimen/home_pulse"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/layout_rate"
            app:layout_constraintStart_toStartOf="@+id/layout_rate"
            app:layout_constraintTop_toBottomOf="@+id/layout_rate"
            tools:text="脉冲数" />

        <ImageView
            android:layout_width="@dimen/pulse_w"
            android:layout_height="@dimen/pulse_w"
            android:layout_marginStart="24dp"
            android:src="@drawable/ic_pulse_w"
            app:layout_constraintBottom_toBottomOf="@+id/tv_pulse"
            app:layout_constraintStart_toEndOf="@+id/tv_pulse"
            app:layout_constraintTop_toTopOf="@+id/tv_pulse" />

        <ImageView
            android:id="@+id/toggle_switch"
            android:layout_width="@dimen/toggle_switch"
            android:layout_height="@dimen/toggle_switch"
            android:layout_marginBottom="46dp"
            android:checked="false"
            android:src="@drawable/ic_stop"
            android:textOff=""
            android:textOn=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_spot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="42dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="光斑尺寸" />

    <ImageView
        android:id="@+id/btn_off"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/img_off"
        app:layout_constraintBottom_toTopOf="@+id/img_redlight_plus"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/btn_aod"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/img_aod"
        app:layout_constraintBottom_toBottomOf="@+id/btn_off"
        app:layout_constraintEnd_toStartOf="@id/btn_off" />

    <ImageView
        android:id="@+id/btn_flash"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/img_flash"
        app:layout_constraintBottom_toBottomOf="@+id/btn_aod"
        app:layout_constraintEnd_toStartOf="@id/btn_aod" />

    <ImageView
        android:id="@+id/img_redlight_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="42dp"
        android:src="@drawable/arrow_forward"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <SeekBar
        android:id="@+id/seek_red_light"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:max="10"
        android:progress="4"
        android:thumb="@drawable/bump"
        android:progressTint="@color/orange_primary_dark"
        android:progressBackgroundTint="@color/gray_light"
        app:layout_constraintBottom_toBottomOf="@+id/img_redlight_plus"
        app:layout_constraintEnd_toStartOf="@+id/img_redlight_plus"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toTopOf="@+id/img_redlight_plus" />

    <ImageView
        android:id="@+id/img_readlight_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_back"
        app:layout_constraintBottom_toBottomOf="@+id/img_redlight_plus"
        app:layout_constraintEnd_toStartOf="@+id/seek_red_light"
        app:layout_constraintTop_toTopOf="@+id/img_redlight_plus" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/red_light"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/img_readlight_minus"
        app:layout_constraintEnd_toStartOf="@+id/img_readlight_minus"
        app:layout_constraintTop_toTopOf="@+id/img_readlight_minus" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />


</androidx.constraintlayout.widget.ConstraintLayout>